<resources>
    <string name="app_name">Wifi Fingerprint</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="connection_status">Connected</string>
    <string name="ssid_name">SSID Name</string>
    <string name="ap_ip">192.168.0.1</string>
    <string name="channel">Channel: 11</string>
    <string name="mac_address">MAC: 12:e3:4f:12:a3</string>
    <string name="mac_label">MAC:</string>
    <string name="signal_strength">-61</string>
    <string name="no_connection">Device is not connected to Wifi!</string>
    <string name="about">About</string>
    <string name="rssi">RSSI</string>
    <string name="mac_address_label">MAC Address:</string>
    <string name="channel_label">Channel:</string>
    <string name="frequency">Frequency:</string>
    <string name="security_protocol">Security Protocol:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="band">Band:</string>
    <string name="frequency_value">5300 MHz</string>
    <string name="band_value">5GHz</string>
    <string name="security_protocol_value" translatable="false">[WAP][WAP2]</string>
    <string name="manufacturer_value">NETGEAR</string>
    <string name="channel_value">112</string>
    <string name="ap_detail_activity_title">AP Detail</string>
    <string name="device_info_activity_title">Device Info</string>
    <string name="device_manufacturer">Manufacturer:</string>
    <string name="device_model">Model:</string>
    <string name="device_brand">Brand:</string>
    <string name="device">Device:</string>
    <string name="product">Product:</string>
    <string name="os">Operating System:</string>
    <string name="os_version">OS Version:</string>
    <string name="api_level">API Level:</string>
    <string name="about_activity_title">About the app</string>
    <string name="channel_chart_activity_title">Channel Chart</string>
    <string name="stored_files_activity_title">Stored Files</string>
    <string name="settings_activity_title">Settings</string>

    <!-- Settings values -->
    <string name="alpha">alphabetically</string>
    <string name="all_bands">all</string>
    <string name="five_g_hz">5GHz</string>
    <string name="two_g_hz">2.4GHz</string>
    <string name="dark_value">dark</string>
    <string name="light_value">light</string>

    <string name="aps_sort_default">RSSI (DESC)</string>
    <string name="band_default">all</string>
    <string name="theme_default">dark</string>
    <string name="file_location_default">Wifi_Fingerprint</string>

    <string name="asc_rssi_sort">sort</string>
    <string name="alphabetically_sort">Alphabetically</string>
    <string name="all_bands_sort">All</string>
    <string name="band_5ghz_sort">5GHz</string>
    <string name="band_2ghz_sort">2.4GHz</string>
    <string name="sort_dark">Dark</string>
    <string name="sort_light">Light</string>

    <!-- Keys and titles of settings-->
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_band_key" translatable="false">band</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_default_location_key" translatable="false">defaultFileLoc</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_band_title">Band</string>
    <string name="pref_sort_title">Sort By</string>
    <string name="pref_default_file_loc_title">Default Files Location</string>


    <string name="scanning_duration">Scanning Duration:</string>
    <string name="location_name">Location Name:</string>
    <string name="cancel">CANCEL</string>
    <string name="small_cancel">cancel</string>
    <string name="save">SAVE</string>
    <string name="file_type">File Type:</string>
    <string name="file_name">File Name:</string>
    <string name="file_name_hint">File Name</string>
    <string name="default_file_location_label">Default File Location:</string>
    <string name="default_file_location_value" translatable="false">a/b/folderXYZ</string>
    <string name="change_file_location">New File Location:</string>
    <string name="browse">Browse</string>
    <string name="file_saved_success">Your file has been saved successfully</string>
    <string name="ok">OK</string>
    <string name="file_type_json" translatable="false">JSON</string>
    <string name="actions_title">Actions</string>
    <string name="file_content_title">Content</string>
    <string name="file_name_title">File Name</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_message">Do you want to Delete</string>
    <string name="file_has_been_deleted">File has been deleted!</string>
    <string name="no_stored_files_message">There are no stored files to display</string>
    <string name="file_saved_failed">Sorry. Your file cannot be saved.</string>
    <string name="name">Name</string>
    <string name="duration">Duration</string>
    <string name="duration_message">Please select a duration from the Scanning Duration dropdown list !</string>

    <!-- About the app-->
    <string name="description_title">Description:</string>
    <string name="description_body">This app enables users to scan WiFi networks and collect data about the access points. The app displays access points and network data in a customizable way. Furthermore, the app enables users to store WiFi information in a SQLite database and retrieve the chosen data in a form of JSON file and share the retrieved file.</string>
    <string name="libraries_title">Used Libraries:</string>
    <string name="libraries_body"><![CDATA[<b>Butterknife</b><br />http://jakewharton.github.io/butterknife/<br/><br/><b>Retrofit</b><br/>http://square.github.io/retrofit/<br/><br/>]]></string>
    <string name="icons_title">Icons Credit:</string>
    <string name="icons_body"><![CDATA[<b>Flaticon</b><br />https://www.flaticon.com/<br/><br/><b>Freepik</b><br/>http://www.freepik.com/<br/><br/>]]></string>
    <string name="widget_ssid">ap name</string>
    <string name="wifi_rssi_image_description">Wifi signal strength image</string>
    <string name="display_file_content_image">Display file content using a file editor</string>
    <string name="share_file_image_description">Share file with other apps</string>
    <string name="bar_image_description">A separator between share and delete buttons</string>
    <string name="delete_file_image_description">Delete file</string>
    <string name="access_point_locked_image_description">The access point is secured</string>
    <string name="mac_label_description">Mac address of the access point label</string>
    <string name="mac_value_description" />
    <string name="app_icon_description">Wifi Fingerprint app\'s icon</string>
    <string name="fab_description">Floating action button write wifi info to a file</string>
    <string name="rssi_description">A bar shows the wifi signal strength</string>
    <string name="list_of_access_points_description">A list of access points icon</string>
    <string name="access_points_drawer_item">Access points (APs)</string>
    <string name="stored_files_drawer_item">Stored Files</string>
    <string name="device_info_drawer_item">Device Info</string>
    <string name="drawer_sub_title_configure">Configure</string>
    <string name="app_version_label">Version:</string>
    <string name="ip_label">IP: </string>
    <string name="location_dialog_title">This is a custom title</string>
    <string name="no_text_reader_installed_message">There is no text reader app installed on your device. Please install one</string>
    <string name="share_file_title">Share file</string>
    <string name="json_file_type">.json file?</string>
    <string name="share_file_type">*/*</string>
    <string name="android_os">Android</string>
    <string name="fingerprint_aps_drawer_item">Fingerprint APs</string>
</resources>
