<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_about_app_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?pageBackground">
<LinearLayout
    android:id="@+id/fragment_about_app"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.elearnna.www.wififingerprint.fragments.AboutFragment">


    <TextView
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_title"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/description_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_body"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/libraries_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libraries_title"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/libraries_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libraries_body"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/icons_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/icons_title"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/icons_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/icons_body"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txt_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Version:"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</LinearLayout>
    </ScrollView>
