<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/wifi_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wifi_signal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_8_dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dimen_8_dp"
        android:layout_marginStart="@dimen/dimen_8_dp"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/tv_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/ssid_name"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/wifi_image"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_channel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/ap_ip"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/tv_ssid"
        android:layout_marginLeft="21dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/tv_ip_address"
        android:layout_marginLeft="7dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.252" />

    <TextView
        android:id="@+id/tv_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteY="39dp"
        app:layout_constraintLeft_toRightOf="@+id/wifi_image"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tv_mac_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mac_address"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/tv_channel"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ip_address"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.078" />

    <TextView
        android:id="@+id/tv_signal_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signal_strength"
        android:textColor="@android:color/black"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_mac_address"
        android:layout_marginRight="102dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>