<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/stored_file_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?pageBackground">

    <TextView
        android:id="@+id/txt_stored_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        tools:text="@string/file_name"
        android:layout_marginLeft="@dimen/dimen_16_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:layout_marginStart="@dimen/dimen_16_dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        android:layout_marginRight="@dimen/dimen_8_dp"
        android:layout_marginEnd="@dimen/dimen_8_dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:paddingBottom="@dimen/dimen_20_dp" />

    <ImageView
        android:id="@+id/img_folder_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_folder"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        android:contentDescription="@string/display_file_content_image"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline15"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="166dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="166dp" />

    <ImageView
        android:id="@+id/img_share_file"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_share"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:layout_marginStart="@dimen/dimen_32_dp"
        android:layout_marginLeft="@dimen/dimen_32_dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        android:contentDescription="@string/share_file_image_description"/>

    <ImageView
        android:id="@+id/img_divider_bar"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_bar"
        app:layout_constraintLeft_toRightOf="@+id/img_share_file"
        app:layout_constraintStart_toEndOf="@+id/img_share_file"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bar_image_description"/>

    <ImageView
        android:id="@+id/img_delete_file"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintLeft_toRightOf="@+id/img_divider_bar"
        app:layout_constraintStart_toEndOf="@+id/img_divider_bar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/delete_file_image_description"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline16"
        app:layout_constraintGuide_begin="247dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="247dp" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/wifi_light_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>