<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scanning_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanning_duration"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="37dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline11"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        app:layout_constraintGuide_begin="192dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <Spinner
        android:id="@+id/scanning_duration_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.048" />

    <TextView
        android:id="@+id/location_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/scanning_duration_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline11"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/location_name_value"
        android:layout_width="142dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Location Name"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/scanning_duration_spinner"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.333" />

    <Button
        android:id="@+id/cancel_location_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="166dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="387dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/location_name_value"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/save_location_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toRightOf="@+id/cancel_location_dialog"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/location_name_value"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.007" />
</android.support.constraint.ConstraintLayout>